--- a/app/views/brands/_brand.html.slim
+++ b/app/views/brands/_brand.html.slim
@@ -8,4 +8,4 @@ tr id="#{dom_id brand}"
       = link_to brand
         i.icn 📄
         | Show
-      = render "_shared/action-edit", route: edit_brand_path(brand)
+      = render "_shared/action_edit", route: edit_brand_path(brand)
