--- a/app/views/colors/_color.html.slim
+++ b/app/views/colors/_color.html.slim
@@ -8,4 +8,4 @@ tr id="#{dom_id color}"
       = link_to color
         i.icn 📄
         | Show
-      = render "_shared/action-edit", route: edit_color_path(color)
+      = render "_shared/action_edit", route: edit_color_path(color)
