--- a/app/views/customers/_customer.html.slim
+++ b/app/views/customers/_customer.html.slim
@@ -6,4 +6,4 @@ tr.hoverable id="#{dom_id customer}" data-action="click->table#goTo" data-table-
 
   - if action_name != "show" 
     td.actions
-      = render "_shared/action-edit", route: edit_customer_path(customer)
+      = render "_shared/action_edit", route: edit_customer_path(customer)
