--- a/app/views/franchises/_franchise.html.slim
+++ b/app/views/franchises/_franchise.html.slim
@@ -8,4 +8,4 @@ tr id="#{dom_id franchise}"
       = link_to franchise
         i.icn 📄
         | Show
-      = render "_shared/action-edit", route: edit_franchise_path(franchise)
+      = render "_shared/action_edit", route: edit_franchise_path(franchise)
