--- a/app/views/purchase_items/show.html.slim
+++ b/app/views/purchase_items/show.html.slim
@@ -16,7 +16,7 @@ nav
         h4 Warehouse: #{@purchase_item.warehouse.name}  
   ul
     li
-      = render "_shared/action-edit", route: edit_purchase_item_path(@purchase_item), btn: true
+      = render "_shared/action_edit", route: edit_purchase_item_path(@purchase_item), btn: true
 
 .section-border-base.section-wide.w-pd.flex.flex-col.gap
   .cards.items-center
