--- a/app/views/purchases/_purchase.html.slim
+++ b/app/views/purchases/_purchase.html.slim
@@ -27,4 +27,4 @@ tr.hoverable id="#{dom_id purchase}" data-action="click->table#goTo" data-table-
 
   - if action_name != "show"
     td.actions
-      = render "_shared/action-edit", route: edit_purchase_path(purchase)
+      = render "_shared/action_edit", route: edit_purchase_path(purchase)
