--- a/app/views/shapes/_shape.html.slim
+++ b/app/views/shapes/_shape.html.slim
@@ -8,4 +8,4 @@ tr id="#{dom_id shape}"
       = link_to shape
         i.icn 📄
         | Show
-      = render "_shared/action-edit", route: edit_shape_path(shape)
+      = render "_shared/action_edit", route: edit_shape_path(shape)
