--- a/app/views/sizes/_size.html.slim
+++ b/app/views/sizes/_size.html.slim
@@ -8,4 +8,4 @@ tr id="#{dom_id size}"
       = link_to size
         i.icn 📄
         | Show
-      = render "_shared/action-edit", route: edit_size_path(size)
+      = render "_shared/action_edit", route: edit_size_path(size)
