--- a/app/views/suppliers/_supplier.html.slim
+++ b/app/views/suppliers/_supplier.html.slim
@@ -8,4 +8,4 @@ tr id="#{dom_id supplier}"
       = link_to supplier
         i.icn 📄
         | Show
-      = render "_shared/action-edit", route: edit_supplier_path(supplier)
+      = render "_shared/action_edit", route: edit_supplier_path(supplier)
