--- a/app/views/sale_items/show.html.slim
+++ b/app/views/sale_items/show.html.slim
@@ -52,4 +52,4 @@ nav
                   = link_to unlink_purchase_items_path(id: pp.id), class: "no-events danger", data: { turbo_confirm: "Are you sure?", turbo_method: :post }
                     i.icn ✂︎
                     | Unlink
-                  = render "_shared/action-edit", route: edit_purchase_item_path(pp, redirect_to_sale_item: true)
+                  = render "_shared/action_edit", route: edit_purchase_item_path(pp, redirect_to_sale_item: true)
