--- a/app/views/versions/_version.html.slim
+++ b/app/views/versions/_version.html.slim
@@ -8,4 +8,4 @@ tr id="#{dom_id version}"
       = link_to version
         i.icn 📄
         | Show
-      = render "_shared/action-edit", route: edit_version_path(version)
+      = render "_shared/action_edit", route: edit_version_path(version)
