--- a/app/views/colors/show.html.slim
+++ b/app/views/colors/show.html.slim
@@ -33,4 +33,4 @@ main
               td.text-gray-500 = product.id
               td = product.full_title 
 
-= button_to "Destroy this color", color_path(@color), method: :delete, class: "btn-danger"
+= destroy_btn_for @color
