--- a/app/views/products/_product_complete_sales.html.slim
+++ b/app/views/products/_product_complete_sales.html.slim
@@ -3,7 +3,7 @@
     h3.flex.justify-between
       span Completed Sales
       span = complete_sales.size
-    table role="grid" data-controller="table"
+    table data-controller="table"
       thead
         th Customer
         th Email
