--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -139,4 +139,4 @@ nav
       = form.submit "Add payment", role: "button"
 
 
-= button_to "Destroy this purchase", purchase_path(@purchase), method: :delete, class: "btn-danger"
+= destroy_btn_for @purchase
