--- a/app/views/sizes/show.html.slim
+++ b/app/views/sizes/show.html.slim
@@ -33,4 +33,4 @@ main
               td.text-gray-500 = product.id
               td = product.full_title 
 
-= button_to "Destroy this size", size_path(@size), method: :delete, class: "btn-danger"
+= destroy_btn_for @size
