--- a/app/views/warehouses/show.html.slim
+++ b/app/views/warehouses/show.html.slim
@@ -37,4 +37,4 @@
 
 = render "_shared/notice-err", model: @warehouse
 
-= button_to "Destroy this warehouse", warehouse_path(@warehouse), method: :delete, class: "btn-danger", data: { turbo_confirm: 'Are you sure you want to delete this warehouse?' }
+= destroy_btn_for @warehouse
