--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -139,7 +139,7 @@
     @apply flex items-center gap-6;
   }
   .card {
-    @apply bg-gray-50 pl-4 pt-4 pr-10 pb-8 rounded-lg w-fit h-fit;
+    @apply bg-gray-50 border border-gray-100 pl-4 pt-4 pr-10 pb-8 rounded-lg w-fit h-fit;
     h5 {
       @apply mt-4 mb-1 text-gray-500;
     }
@@ -156,135 +156,19 @@
 }
 
 @layer components {
-  .gallery {
-    display: flex;
-    position: relative;
-    flex-shrink: 0;
-    flex-direction: row;
-    gap: var(--spacing-m);
-    width: 600px;
-    height: 600px;
-    overflow: hidden;
-
-    .gallery__nav {
-      display: flex;
-      flex-flow: column;
-      justify-content: flex-start;
-      align-self: center;
-      gap: 18px;
-      padding: 24px 16px;
-      width: 128px;
-      height: 80%;
-      overflow: scroll;
-
-      img {
-        border: 0px solid var(--table-row-stripped-background-color);
-
-        &:hover {
-          transform: scale3d(1.2, 1.2, 2);
-          cursor: pointer;
-        }
-      }
-
-      img.active {
-        box-shadow: 0 0 6px 2px rgba(97, 184, 241, 0.5);
-        border: 6px solid var(--table-row-stripped-background-color);
-      }
-    }
-
-    .gallery__main {
-      display: flex;
-      position: relative;
-      justify-content: center;
-      width: 100%;
-      height: 100%;
-      min-height: 100%;
-
-      img {
-        align-self: center;
-      }
-    }
-
+  .gallery-nav {
+    @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
     img {
-      border-radius: 2px;
-    }
-
-    .gallery__btn {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      z-index: 10;
-      border: none;
-      background: transparent;
-      width: 5rem;
-      height: 100%;
-      color: rgba(0, 0, 0, 0.25);
-      font-weight: 100;
-      font-size: 2rem;
-
-      &:first-of-type {
-        left: 0;
-      }
-
-      &:last-of-type {
-        right: 0;
-      }
-
       &:hover {
-        background-color: var(--primary-focus);
-        color: var(--primary);
-      }
-
-      &:focus {
-        box-shadow: none;
+        transform: scale3d(1.2, 1.2, 2);
+        cursor: pointer;
       }
     }
-  }
-
-  /* .table-card {
-    flex-grow: 1;
-    border: 1px solid var(--color-gray-100);
-    border-radius: var(--rounded-lg);
-    padding-bottom: 0;
-    height: min-content;
-  }
-  .table-card .pagination:first-of-type {
-    padding-top: 0;
-  }
-  .table-card.full-width {
-    width: 100%;
-  }
-  .table-card.mg-t {
-    margin-top: var(--spacing-xl);
-  }
-  .table-card h3 {
-    margin: 0;
-    margin-bottom: var(--spacing);
-    padding: var(--spacing);
-    padding-bottom: 0;
-  }
-  .table-card table {
-    margin-bottom: 0;
-  }
-  .table-card th {
-    font-weight: 700;
-    font-size: calc(var(--font-size) * 0.8);
-  }
-  .table-card tr:last-child td {
-    border-bottom: 0;
-  }
-  .table-cards-group {
-    display: flex;
-    justify-content: space-between;
-    gap: var(--spacing-m);
-  }
-  .table-cards-group {
-    > .table-card {
-      padding-bottom: 0;
+    img.active {
+      @apply outline-gray-500 outline-dashed outline-offset-3;
     }
-
-    > .table-card table {
-      margin-bottom: 0;
-    }
-  } */
+  }
+  .gallery-btn {
+    @apply absolute top-1/2 -translate-y-1/2 z-10 border-none w-20 min-h-83 h-full text-3xl bg-transparent text-gray-300 transition-all duration-150 hover:bg-black/20 hover:text-white;
+  }
 }
