--- a/app/views/_shared/_preloadable_img.html.slim
+++ b/app/views/_shared/_preloadable_img.html.slim
@@ -2,7 +2,7 @@
 - style = "" if local_assigns[:width].nil?
 - style = "height: #{local_assigns[:width] * 1.2}px; min-width: #{local_assigns[:width]}px; max-width: #{local_assigns[:width]}px;" if local_assigns[:width].present?
 
-.preloadable-img__container.w-fit.h-fit data-controller="preloadable-img" data-preloadable-img-src-value=src data-turbo-permanent="true"
+.preloadable-img__container.justify-self-center.w-fit.h-fit data-controller="preloadable-img" data-preloadable-img-src-value=src data-turbo-permanent="true"
   - if src != nil
     = image_tag "", class: "preloadable-img__img loading #{class_names}", data: {"preloadable-img-target":"img", **data}, style:
   - else
