--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -1,26 +1,15 @@
 = render "_shared/notice"
 
-nav
-  ul
-    li
-      ul
-        li = link_to "All sales", sales_path
-      hgroup
-        - if @sale.shop_id.present?
-          h1.relative.w-fit
-            | Sale #{@sale.shopify_name}
-            = link_to sale_shop_link(@sale), class: "link-icn h1"
-              = inline_svg "link-icn.svg"
-        - else
-          h1 Sale
-        h4 = @sale.title
-  ul.gap
+header.flex.justify-between.items-center.mb-8
+  hgroup
+    h1 = "Sale #{@sale.shopify_name.presence || ""}"
+    h2 = @sale.title
+  menu.flex.gap-2
     - if @sale.shopify_id
-      li
-        a.btn href="#{url_for pull_sale_path(sale: @sale)}" 
-          i.icn 📥
-          | Pull
-    li = render "_shared/action_edit", route: url_for(controller: "#{@sale.model_name.plural}", action: "edit", id: @sale), btn: true
+      li = pull_btn_for @sale
+    li = shop_admin_link @sale
+    li = back_btn
+    li = edit_btn_for @sale
 
 .section-border-base.section-wide.flex.flex-col.gap.w-pd.no-bd
   = render "order_items_list", sale: @sale
