--- a/app/views/sales/_purchase_items.html.slim
+++ b/app/views/sales/_purchase_items.html.slim
@@ -1,21 +1,21 @@
-ul.v-align.ml-s.list-none
+menu
   - purchase_items.each do |purchase_item|
     li
-      a.no-events href=purchase_item_path(purchase_item)
+      a.mt-2.no-events href=purchase_item_path(purchase_item)
         i.icn 📦
         | #{purchase_item.warehouse.name}
         - if purchase_item.expenses
           | — expenses: $
           .font-mono.inline = format_money purchase_item.expenses
       br
-      a.no-events href=purchase_path(purchase_item.purchase)
+      a.mt-2.no-events href=purchase_path(purchase_item.purchase)
         i.icn 💰
-        |  #{purchase_item.purchase.supplier.title}
+        | #{purchase_item.purchase.supplier.title}
         | , #{format_date purchase_item.purchase.date}
         - if purchase_item.purchase.item_price
-          | — cost: $
-          .font-mono.inline = format_money purchase_item.purchase.item_price
+          | , $
+          = format_money purchase_item.purchase.item_price
       br
-      = link_to unlink_purchase_items_path(id: purchase_item.id), class: "no-events danger no-bg-hover", data: { turbo_confirm: "Are you sure?", turbo_method: :post }
+      = link_to unlink_purchase_items_path(id: purchase_item.id), class: "no-events mt-2 btn-red btn-rounded", data: { turbo_confirm: "Are you sure?", turbo_method: :post }
         i.icn ✂︎
         | Unlink
