--- a/app/views/sales/_sale_address.html.slim
+++ b/app/views/sales/_sale_address.html.slim
@@ -1,6 +1,6 @@
 .table-card.full-width
   h3 Address
-  table role="grid"
+  table
     thead
       th Address 1
       - if sale.address_2.present?
