--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -11,7 +11,7 @@ header.flex.justify-between.items-center.mb-8
     li = back_btn
     li = edit_btn_for @sale
 
-.section-border-base.section-wide.flex.flex-col.gap.w-pd.no-bd
+.section-wide.flex.flex-col.gap.w-pd.no-bd.gap-8
   = render "order_items_list", sale: @sale
   = render "sale_attributes", sale: @sale
   = render "sale_address", sale: @sale
