--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -12,6 +12,6 @@ header.flex.justify-between.items-center.mb-8
     li = edit_btn_for @sale
 
 .section-wide.flex.flex-col.gap.w-pd.no-bd.gap-8
-  = render "order_items_list", sale: @sale
+  = render "sale_items", sale: @sale
   = render "sale_attributes", sale: @sale
   = render "sale_address", sale: @sale
