--- a/app/views/_shared/move_to_warehouse/_td.html.slim
+++ b/app/views/_shared/move_to_warehouse/_td.html.slim
@@ -1,2 +1,2 @@
-td.no-events
-  = check_box_tag "product_ids[]", id, false, data: { 'move-items-target': 'checkbox', action: 'change->move-items#toggleFormVisibility' }, class: "mx-auto"
+td.no-events.text-center
+  = check_box_tag "product_ids[]", id, false, data: { 'move-items-target': 'checkbox', action: 'change->move-items#toggleFormVisibility' }, class: ""
