--- a/app/views/_shared/move_to_warehouse/_th.html.slim
+++ b/app/views/_shared/move_to_warehouse/_th.html.slim
@@ -1,2 +1,2 @@
-th.text-center.narrow-select
-  span.semi-link data-action="click->move-items#toggleMassSelect" data-move-items-target="toggleAllLink" Select
+th.text-center.w-18.cursor-pointer
+  span.hover:text-blue-600 data-action="click->move-items#toggleMassSelect" data-move-items-target="toggleAllLink" Move
