--- a/app/views/sales/_form.html.slim
+++ b/app/views/sales/_form.html.slim
@@ -57,8 +57,7 @@
     = form.collection_radio_buttons(:status, Sale.status_names, :itself, :titleize) do |rdb|
       .flex.items-center.mr-2
         = rdb.label(class: "m-0 p-0 flex items-center relative cursor-pointer")
-          = rdb.radio_button class: "p-0 peer h-5 w-5 rounded-full border border-gray-300 checked:border-gray-400 transition-all"
-          span.absolute.bg-gray-800.w-3.h-3.rounded-full.opacity-0.peer-checked:opacity-100.transition-opacity.duration-200.top-1/2.left-1/2.transform.-translate-x-1/2.-translate-y-1/2
+          = rdb.radio_button class: "p-0"
         = rdb.label class: "m-0 p-0 pl-2 cursor-pointer text-sm"
 
   h5.mt-8.mb-3 Products 
