Add small size option to shop admin link and improve purchases show UI

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -9,7 +9,7 @@ header.flex.justify-between.items-center.mb-8
       li = pull_btn_for @product
     li = link_to new_purchase_path(product: @product)
       i.icn 💰
-      | Purchase
+      | New Purchase
     li = back_btn
     li = edit_btn_for @product
 
