--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -11,7 +11,7 @@ header.flex.justify-between.items-center.mb-8
     li = back_btn
     li = edit_btn_for @sale
 
-.section-wide.flex.flex-col.gap.w-pd.no-bd.gap-8
+.section-wide.flex.flex-col.gap-8
   = render "sale_items", sale: @sale
   = render "sale_attributes", sale: @sale
   = render "sale_address", sale: @sale
