--- a/app/views/_shared/_action_destroy.html.slim
+++ b/app/views/_shared/_action_destroy.html.slim
@@ -1,3 +1,3 @@
-= link_to route, class: "no-events danger", data: { turbo_confirm: "Are you sure?", turbo_method: :delete }
+= link_to route, class: "no-events btn-red btn-rounded", data: { turbo_confirm: "Are you sure?", turbo_method: :delete }
   i.icn 🗑
   | Destroy
